--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +20,7 @@
             user-select: none;
             touch-action: none;
         }
+
         .cursor-highlight {
             position: fixed;
             left: 50%;
@@ -30,6 +32,7 @@
             transition: left 0.2s ease-out, top 0.2s ease-out, opacity 0.3s ease;
             will-change: left, top;
         }
+
         .styled-button {
             display: inline-block;
             background-color: #4a5568;
@@ -41,12 +44,14 @@
             transition: transform 0.2s, background-color 0.2s;
             text-decoration: none;
         }
+
         .styled-button:hover {
             background-color: #718096;
             transform: scale(1.05);
         }
     </style>
 </head>
+
 <body class="bg-gray-900 text-white overflow-hidden">
 
     <div id="cursor-highlight" class="cursor-highlight bg-yellow-400 w-64 h-64 opacity-30"></div>
@@ -57,20 +62,21 @@
                 Say hi to your brand new digital tijori!
             </h1>
             <!-- Dynamic Service Counter Heading -->
-            <h2 id="service-counter" class="mt-12 text-xl text-gray-300 font-semibold tracking-wide" style="margin-bottom: 40px; font-size: 25px"></h2>
+            <h2 id="service-counter" class="mt-12 text-xl text-gray-300 font-semibold tracking-wide"
+                style="margin-bottom: 40px; font-size: 25px"></h2>
             <!-- Button Container -->
             <div id="button-container" class="mt-4 flex flex-wrap justify-center items-center gap-4">
-		<a href="https://vaultwarden.digital-tijori.theworkpc.com" class="styled-button">Vaultwarden</a>
-                <a href="https://immich.digital-tijori.theworkpc.com" class="styled-button">Immich</a>
-	    </div>
-	    <p class="mt-4 text-lg md:text-xl text-gray-400">
+                <a href="https://vaultwarden.divyarasania.com" class="styled-button">Vaultwarden</a>
+                <a href="https://immich.divyarasania.com" class="styled-button">Immich</a>
+            </div>
+            <p class="mt-4 text-lg md:text-xl text-gray-400">
                 Admin
             </p>
-	    <div id="button-container" class="mt-4 flex flex-wrap justify-center items-center gap-4">
-		<a href="https://portainer.digital-tijori.theworkpc.com" class="styled-button">Portainer</a>
-		<a href="https://wireguard.digital-tijori.theworkpc.com" class="styled-button">Wireguard</a>
-		<a href="https://filebrowser.digital-tijori.theworkpc.com" class="styled-button">File Browser</a>
-	    </div>
+            <div id="button-container" class="mt-4 flex flex-wrap justify-center items-center gap-4">
+                <a href="https://portainer.divyarasania.com" class="styled-button">Portainer</a>
+                <a href="https://wireguard.divyarasania.com" class="styled-button">Wireguard</a>
+                <a href="https://filebrowser.divyarasania.com" class="styled-button">File Browser</a>
+            </div>
         </div>
     </div>
 
@@ -114,10 +120,10 @@
             vel.x = Math.cos(angle) * speed;
             vel.y = Math.sin(angle) * speed;
             roamAnimationId = requestAnimationFrame(roamAnimation);
-            if(dashInterval) clearInterval(dashInterval);
+            if (dashInterval) clearInterval(dashInterval);
             dashInterval = setInterval(dash, 4000 + Math.random() * 2000);
         }
-        
+
         function stopRoaming() {
             if (roamAnimationId) {
                 cancelAnimationFrame(roamAnimationId);
@@ -147,7 +153,7 @@
             // Set up the dynamic service counter
             const buttonContainer = document.getElementById('button-container');
             const serviceCounterElement = document.getElementById('service-counter');
-            
+
             if (buttonContainer && serviceCounterElement) {
                 const serviceCount = buttonContainer.children.length;
                 serviceCounterElement.textContent = `We offer ${serviceCount} services. Click to explore.`;
@@ -167,5 +173,5 @@
     </script>
 
 </body>
-</html>
 
+</html>
